--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,3 +1,34 @@
-.container{
+/*mobile*/
+.face-pic {
+  height: 250px;
+  width: 250px;
+}
 
+.pic-box{
+  margin-left:7%;
+}
+
+
+/*tablet*/
+@media (min-width: 600px){
+  .face-pic {
+    height: 250px;
+    width: 250px;
+  }
+
+  .pic-box{
+    margin-left:12%;
+  }
+}
+
+/*desktop*/
+@media (min-width: 768px) {
+  .face-pic {
+    height: 200px;
+    width: 200px;
+  }
+
+  .pic-box{
+    margin-left: 7%;
+  }
 }
